--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,271 +1,170 @@
-name: OpenList Alpine x86_64 编译
+name: OpenList Alpine x86_64 Build
 on:
   push:
   pull_request:
   workflow_dispatch:
     inputs:
-      debug_enabled:
+      debug:
         type: boolean
         default: false
-        description: '启用调试模式'
+        description: 'Enable debug mode'
 jobs:
   compile-openlist:
     runs-on: ubuntu-latest
     container: alpine:3.23
     steps:
-      - name: 初始化环境
+      - name: Setup Environment
         run: |
-          apk update && apk add --no-cache git file coreutils ca-certificates
-          mkdir -p /app /build /go-cache
+          apk update && apk add --no-cache git file coreutils
+          mkdir -p /app /build
 
-      - name: 拉取源码
+      - name: Checkout Code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      - name: 安装Go编译环境
+      - name: Install Go and Dependencies
         run: |
           apk add --no-cache go gcc g++ musl-dev linux-headers
           go version
-          
-          # 配置Go环境
-          go env -w GOPROXY=https://goproxy.io,direct
-          go env -w GOSUMDB=sum.golang.google.cn
+
+      - name: Configure Go Environment
+        run: |
+          # GitHub环境使用默认代理
+          go env -w GOPROXY=https://proxy.golang.org,direct
+          go env -w GOSUMDB=on
           go env -w GO111MODULE=on
           
-          # 显示Go环境配置
-          echo "Go环境配置:"
-          go env | grep -E "PROXY|SUM|MODULE"
+          echo "Go environment:"
+          go env | grep -E "GOPROXY|GOSUMDB|GO111MODULE"
 
-      - name: 设置多镜像源下载依赖
+      - name: Check Project Structure
         run: |
-          cd "$GITHUB_WORKSPACE"
+          echo "Current directory: $(pwd)"
+          echo "Directory contents:"
+          ls -la
           
-          echo "尝试下载Go模块依赖..."
-          
-          # 方法1: 使用多个代理尝试
-          for proxy in "https://goproxy.io" "https://proxy.golang.org" "https://mirrors.aliyun.com/goproxy/" "direct"; do
-            echo "尝试使用代理: $proxy"
-            GOPROXY=$proxy go mod download
-            if [ $? -eq 0 ]; then
-              echo "依赖下载成功"
-              break
-            fi
-            echo "代理 $proxy 失败，尝试下一个..."
-          done
-          
-          # 方法2: 如果上述方法失败，尝试vendoring
-          if [ ! -f "go.sum" ] || [ ! -d "vendor" ]; then
-            echo "尝试创建vendor目录..."
-            go mod vendor || true
-          fi
-          
-          echo "依赖列表:"
-          go list -m all | head -20
-
-      - name: 离线编译准备
-        run: |
-          cd "$GITHUB_WORKSPACE"
-          
-          # 检查是否有vendor目录
-          if [ -d "vendor" ]; then
-            echo "使用vendor模式编译"
-            GOFLAGS="-mod=vendor"
-          else
-            echo "使用在线模式编译"
-            GOFLAGS=""
-          fi
-          
-          # 检查go.mod内容
           if [ -f "go.mod" ]; then
-            echo "go.mod内容:"
-            head -20 go.mod
-            echo "项目模块: $(grep '^module' go.mod | head -1)"
-          fi
-          
-          # 查找main包
-          echo "查找main包..."
-          MAIN_PACKAGES=$(go list ./... | grep -E "/cmd/|/main$" || find . -name "*.go" -type f -exec grep -l "func main()" {} \; | head -5)
-          echo "可能的main包: $MAIN_PACKAGES"
-
-      - name: 编译OpenList（尝试多种方式）
-        continue-on-error: true
-        run: |
-          cd "$GITHUB_WORKSPACE"
-          
-          echo "=== 开始编译 ==="
-          
-          # 方式1: 尝试编译整个项目（如果有多个二进制文件）
-          echo "方式1: 编译所有..."
-          CGO_ENABLED=1 GOOS=linux GOARCH=amd64 GOFLAGS="-buildvcs=false" \
-          go build -trimpath -ldflags="-s -w -extldflags '-static'" \
-          -o /app/openlist ./... 2>&1 | tee /tmp/build.log || true
-          
-          # 方式2: 如果方式1失败，尝试指定模块
-          if [ ! -f "/app/openlist" ]; then
-            echo "方式2: 查找并编译main包..."
-            
-            # 查找包含main函数的目录
-            MAIN_DIRS=$(find . -name "*.go" -type f -exec grep -l "func main()" {} \; | xargs dirname | sort -u)
-            
-            for dir in $MAIN_DIRS; do
-              echo "尝试编译目录: $dir"
-              CGO_ENABLED=1 GOOS=linux GOARCH=amd64 GOFLAGS="-buildvcs=false" \
-              go build -trimpath -ldflags="-s -w -extldflags '-static'" \
-              -o "/app/openlist-$(basename $dir)" "./$dir"
-              
-              if [ $? -eq 0 ]; then
-                cp "/app/openlist-$(basename $dir)" /app/openlist
-                echo "编译成功: $dir"
-                break
-              fi
-            done
-          fi
-          
-          # 方式3: 使用vendor模式
-          if [ ! -f "/app/openlist" ] && [ -d "vendor" ]; then
-            echo "方式3: 使用vendor模式编译..."
-            CGO_ENABLED=1 GOOS=linux GOARCH=amd64 GOFLAGS="-mod=vendor -buildvcs=false" \
-            go build -trimpath -ldflags="-s -w -extldflags '-static'" \
-            -o /app/openlist .
-          fi
-          
-          # 检查结果
-          if [ -f "/app/openlist" ]; then
-            chmod +x /app/openlist
-            mv /app/openlist /app/openlist-alpine-x86_64
-            echo "编译成功!"
-            file /app/openlist-alpine-x86_64
-            ls -lh /app/openlist-alpine-x86_64
+            echo "Found go.mod:"
+            head -10 go.mod
+            echo "Module: $(grep '^module' go.mod)"
           else
-            echo "编译失败，查看日志..."
-            cat /tmp/build.log || true
-            echo "::warning::编译失败，继续尝试其他方式"
-          fi
-
-      - name: 备用编译方式（直接下载依赖）
-        if: failure()
-        run: |
-          cd "$GITHUB_WORKSPACE"
-          
-          echo "=== 备用编译方式 ==="
-          echo "清理并重新初始化..."
-          
-          # 清理缓存
-          go clean -modcache
-          
-          # 使用多个代理和直接下载混合模式
-          echo "初始化模块..."
-          go mod init openlist-build || true
-          
-          echo "设置多源下载..."
-          # 使用阿里云代理+直接下载
-          GOPROXY=https://mirrors.aliyun.com/goproxy/,direct go mod tidy
-          GOPROXY=https://mirrors.aliyun.com/goproxy/,direct go mod download
-          
-          echo "尝试编译..."
-          # 禁用CGO简化编译
-          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
-          go build -trimpath -ldflags="-s -w -buildvcs=false" \
-          -o /app/openlist-alpine-x86_64 .
-          
-          if [ -f "/app/openlist-alpine-x86_64" ]; then
-            chmod +x /app/openlist-alpine-x86_64
-            echo "备用编译成功!"
-            file /app/openlist-alpine-x86_64
-          fi
-
-      - name: 手动下载依赖（如果网络问题严重）
-        if: failure()
-        run: |
-          cd "$GITHUB_WORKSPACE"
-          
-          echo "=== 手动下载依赖 ==="
-          
-          # 列出主要依赖
-          echo "主要依赖:"
-          grep -E "^\t" go.mod | head -20
-          
-          # 尝试使用git直接下载（绕过代理）
-          echo "手动创建vendor目录..."
-          mkdir -p vendor
-          
-          # 下载关键依赖（根据之前的错误）
-          echo "下载关键依赖..."
-          go get -v github.com/meilisearch/meilisearch-go@v0.32.0 || true
-          go get -v github.com/go-webauthn/webauthn@v0.13.4 || true
-          go get -v github.com/itsHenry35/gofakes3@v0.0.8 || true
-          
-          # 再次尝试编译
-          CGO_ENABLED=1 GOOS=linux GOARCH=amd64 GOFLAGS="-buildvcs=false" \
-          go build -trimpath -ldflags="-s -w" \
-          -o /app/openlist-alpine-x86_64 . || true
-
-      - name: 最终编译尝试（简化版）
-        if: failure()
-        run: |
-          cd "$GITHUB_WORKSPACE"
-          
-          echo "=== 最终尝试：最小化编译 ==="
-          
-          # 创建最小化main.go测试
-          cat > /tmp/simple-build.go << 'EOF'
-          package main
-          
-          import "fmt"
-          
-          func main() {
-              fmt.Println("OpenList Alpine Build")
-              fmt.Println("Version: Alpine x86_64")
-          }
-          EOF
-          
-          # 如果所有方法都失败，至少生成一个可执行文件
-          CGO_ENABLED=0 GOOS=linux GOARCH=amd64 \
-          go build -o /app/openlist-alpine-x86_64 /tmp/simple-build.go
-          
-          chmod +x /app/openlist-alpine-x86_64
-          echo "生成了最小化版本"
-
-      - name: 产物处理
-        run: |
-          echo "处理编译产物..."
-          
-          if [ -f "/app/openlist-alpine-x86_64" ]; then
-            # 文件信息
-            echo "编译产物信息:"
-            file /app/openlist-alpine-x86_64
-            echo "文件大小:"
-            ls -lh /app/openlist-alpine-x86_64
-            
-            # 瘦身
-            strip /app/openlist-alpine-x86_64 2>/dev/null || true
-            
-            # 打包
-            mkdir -p /app-dist
-            cp /app/openlist-alpine-x86_64 /app-dist/
-            
-            # 创建说明文件
-            cat > /app-dist/README.txt << EOF
-            OpenList Alpine x86_64 版本
-            编译时间: $(date)
-            文件信息: $(file /app/openlist-alpine-x86_64)
-            编译环境: Alpine 3.23 x86_64
-            注意事项: 如果这是最小化版本，可能需要手动下载依赖
-            EOF
-            
-            tar -zcvf /build/openlist-alpine-x86_64-$(date +%Y%m%d-%H%M%S).tar.gz -C /app-dist .
-            
-            echo "产物打包完成:"
-            ls -lh /build/*.tar.gz
-          else
-            echo "::error::未生成可执行文件"
-            echo "当前app目录内容:"
-            ls -la /app/ || true
+            echo "::error::No go.mod found"
             exit 1
           fi
 
-      - name: 上传产物
+      - name: Download Dependencies
+        run: |
+          echo "Downloading Go modules..."
+          
+          # 尝试下载依赖，如果失败显示具体错误
+          go mod download 2>&1 | tee /tmp/mod-download.log || {
+            echo "::warning::go mod download failed, trying go mod tidy..."
+            go mod tidy 2>&1 | tee /tmp/mod-tidy.log || true
+          }
+          
+          # 检查是否成功
+          if [ -f "go.sum" ]; then
+            echo "Dependencies downloaded successfully"
+            echo "go.sum size: $(wc -l go.sum) lines"
+          else
+            echo "::warning::go.sum not created, dependencies may be missing"
+          fi
+
+      - name: Build OpenList
+        run: |
+          echo "Building OpenList..."
+          
+          # 查找main包
+          echo "Finding main packages..."
+          MAIN_PACKAGES=$(find . -name "*.go" -type f -exec grep -l "func main()" {} \; | head -5)
+          
+          if [ -n "$MAIN_PACKAGES" ]; then
+            echo "Main packages found:"
+            echo "$MAIN_PACKAGES"
+            
+            # 尝试编译第一个找到的main包
+            FIRST_MAIN=$(echo "$MAIN_PACKAGES" | head -1)
+            MAIN_DIR=$(dirname "$FIRST_MAIN")
+            
+            echo "Building from: $MAIN_DIR"
+            
+            CGO_ENABLED=1 GOOS=linux GOARCH=amd64 \
+            go build -trimpath -ldflags="-s -w -extldflags '-static' -buildvcs=false" \
+            -o /app/openlist-alpine-x86_64 "./$MAIN_DIR"
+          else
+            echo "No main packages found, trying to build from root..."
+            
+            # 尝试从根目录构建
+            CGO_ENABLED=1 GOOS=linux GOARCH=amd64 \
+            go build -trimpath -ldflags="-s -w -extldflags '-static' -buildvcs=false" \
+            -o /app/openlist-alpine-x86_64 .
+          fi
+          
+          # 验证构建结果
+          if [ -f "/app/openlist-alpine-x86_64" ]; then
+            chmod +x /app/openlist-alpine-x86_64
+            echo "Build successful!"
+            file /app/openlist-alpine-x86_64
+            ls -lh /app/openlist-alpine-x86_64
+          else
+            echo "::error::Build failed - no executable created"
+            
+            # 尝试更详细的错误信息
+            echo "Trying to build with verbose output..."
+            CGO_ENABLED=1 GOOS=linux GOARCH=amd64 \
+            go build -v -x -o /app/test-build . 2>&1 | tail -50
+            
+            exit 1
+          fi
+
+      - name: Debug Info
+        if: github.event_name == 'workflow_dispatch' && inputs.debug == true
+        run: |
+          echo "=== DEBUG INFORMATION ==="
+          echo "Go version: $(go version)"
+          echo "Go env:"
+          go env
+          echo "Directory tree (Go files):"
+          find . -name "*.go" -type f | head -30
+          echo "go.mod dependencies:"
+          grep -E "^\t" go.mod || echo "No dependencies listed"
+          echo "Network check:"
+          curl -I https://proxy.golang.org --connect-timeout 5 || echo "Network test failed"
+
+      - name: Process Artifacts
+        run: |
+          if [ -f "/app/openlist-alpine-x86_64" ]; then
+            echo "Processing artifact..."
+            
+            # Strip binary
+            strip /app/openlist-alpine-x86_64 2>/dev/null || true
+            
+            # Create distribution package
+            mkdir -p /dist
+            cp /app/openlist-alpine-x86_64 /dist/
+            
+            # Create info file
+            cat > /dist/build-info.txt << EOF
+            OpenList Alpine x86_64 Build
+            Build time: $(date)
+            Build environment: Alpine 3.23
+            Architecture: x86_64/amd64
+            File info: $(file /app/openlist-alpine-x86_64)
+            File size: $(stat -c%s /app/openlist-alpine-x86_64) bytes
+            EOF
+            
+            # Package
+            tar -zcvf /build/openlist-alpine-x86_64-$(date +%Y%m%d-%H%M%S).tar.gz -C /dist .
+            
+            echo "Artifact created:"
+            ls -lh /build/*.tar.gz
+          else
+            echo "::error::No artifact to process"
+            exit 1
+          fi
+
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
           name: openlist-alpine-x86_64
