--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,172 +1,238 @@
-name: OpenList Alpine x86_64 Build
+name: Alpine Builds
+
 on:
   push:
+    branches: [ main, master ]
   pull_request:
+    branches: [ main, master ]
+  release:
+    types: [ published ]
   workflow_dispatch:
     inputs:
-      debug:
-        type: boolean
-        default: false
-        description: 'Enable debug mode'
+      build_type:
+        type: choice
+        description: 'Build type'
+        required: true
+        default: 'standard'
+        options:
+        - standard
+        - lite
+
+permissions:
+  contents: write
+
 jobs:
-  compile-openlist:
+  alpine-build:
+    name: Alpine ${{ github.event.inputs.build_type || 'standard' }}
     runs-on: ubuntu-latest
-    container: alpine:3.23
+    container:
+      image: alpine:3.23
+      options: --privileged
+    
     steps:
-      - name: Setup Environment
+      - name: Setup Alpine Environment
         run: |
-          apk update && apk add --no-cache git file coreutils
-          mkdir -p /app /build
+          apk update
+          apk add --no-cache \
+            git \
+            bash \
+            coreutils \
+            file \
+            ca-certificates \
+            make \
+            upx
+          
+          # 创建必要目录
+          mkdir -p /go/src /go/bin /go/pkg
+          export GOPATH=/go
+          export PATH=$PATH:/go/bin
 
-      - name: Checkout Code
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - name: Install Go and Dependencies
+      - name: Setup Go
         run: |
           apk add --no-cache go gcc g++ musl-dev linux-headers
           go version
+          echo "GOPATH=$(go env GOPATH)" >> $GITHUB_ENV
+          echo "GOBIN=$(go env GOBIN)" >> $GITHUB_ENV
 
-      - name: Configure Go Environment
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          path: /src
+
+      - name: Configure Git
         run: |
-          # GitHub环境使用默认代理
+          git config --global --add safe.directory /src
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "actions@github.com"
+
+      - name: Detect Build Configuration
+        id: config
+        run: |
+          cd /src
+          
+          # 检查是否为lite版本
+          IS_LITE="false"
+          if [[ "${{ github.event.inputs.build_type }}" == "lite" ]] || [[ "${{ matrix.build-type }}" == "lite" ]]; then
+            IS_LITE="true"
+          fi
+          
+          # 检测架构
+          ARCH="x86_64"
+          
+          # 构建标志
+          BUILD_FLAGS="-trimpath -ldflags='-s -w -extldflags \"-static\"' -buildvcs=false"
+          if [ "$IS_LITE" = "true" ]; then
+            BUILD_FLAGS="$BUILD_FLAGS -tags=lite"
+          fi
+          
+          echo "is_lite=$IS_LITE" >> $GITHUB_OUTPUT
+          echo "arch=$ARCH" >> $GITHUB_OUTPUT
+          echo "build_flags=$BUILD_FLAGS" >> $GITHUB_OUTPUT
+          
+          echo "Build Configuration:"
+          echo "  Type: ${{ github.event.inputs.build_type || 'standard' }}"
+          echo "  Lite: $IS_LITE"
+          echo "  Arch: $ARCH"
+          echo "  Flags: $BUILD_FLAGS"
+
+      - name: Prepare Dependencies
+        run: |
+          cd /src
+          echo "Preparing dependencies..."
+          
+          # 设置Go环境
           go env -w GOPROXY=https://proxy.golang.org,direct
           go env -w GOSUMDB=on
           go env -w GO111MODULE=on
           
-          echo "Go environment:"
-          go env | grep -E "GOPROXY|GOSUMDB|GO111MODULE"
-
-      - name: Check Project Structure
-        run: |
-          echo "Current directory: $(pwd)"
-          echo "Directory contents:"
-          ls -la
-          
-          if [ -f "go.mod" ]; then
-            echo "Found go.mod:"
-            head -10 go.mod
-            echo "Module: $(grep '^module' go.mod)"
-          else
-            echo "::error::No go.mod found"
-            exit 1
-          fi
-
-      - name: Download Dependencies
-        run: |
-          echo "Downloading Go modules..."
-          
-          # 尝试下载依赖，如果失败显示具体错误
-          go mod download 2>&1 | tee /tmp/mod-download.log || {
-            echo "::warning::go mod download failed, trying go mod tidy..."
-            go mod tidy 2>&1 | tee /tmp/mod-tidy.log || true
+          # 下载依赖
+          echo "Downloading modules..."
+          go mod download 2>&1 | tail -20 || {
+            echo "go mod download failed, trying go mod tidy..."
+            go mod tidy 2>&1 | tail -20 || true
           }
           
-          # 检查是否成功
-          if [ -f "go.sum" ]; then
-            echo "Dependencies downloaded successfully"
-            echo "go.sum size: $(wc -l go.sum) lines"
-          else
-            echo "::warning::go.sum not created, dependencies may be missing"
-          fi
+          # 显示依赖信息
+          echo "Module information:"
+          go list -m all | head -10
 
-      - name: Build OpenList
+      - name: Build Binary
         run: |
-          echo "Building OpenList..."
+          cd /src
           
-          # 查找main包
-          echo "Finding main packages..."
-          MAIN_PACKAGES=$(find . -name "*.go" -type f -exec grep -l "func main()" {} \; | head -5)
+          BUILD_FLAGS="${{ steps.config.outputs.build_flags }}"
+          ARCH="${{ steps.config.outputs.arch }}"
+          IS_LITE="${{ steps.config.outputs.is_lite }}"
           
-          if [ -n "$MAIN_PACKAGES" ]; then
-            echo "Main packages found:"
-            echo "$MAIN_PACKAGES"
-            
-            # 尝试编译第一个找到的main包
-            FIRST_MAIN=$(echo "$MAIN_PACKAGES" | head -1)
-            MAIN_DIR=$(dirname "$FIRST_MAIN")
-            
-            echo "Building from: $MAIN_DIR"
-            
-            CGO_ENABLED=1 GOOS=linux GOARCH=amd64 \
-            go build -trimpath -ldflags="-s -w -extldflags '-static' -buildvcs=false" \
-            -o /app/openlist-alpine-x86_64 "./$MAIN_DIR"
-          else
-            echo "No main packages found, trying to build from root..."
-            
-            # 尝试从根目录构建
-            CGO_ENABLED=1 GOOS=linux GOARCH=amd64 \
-            go build -trimpath -ldflags="-s -w -extldflags '-static' -buildvcs=false" \
-            -o /app/openlist-alpine-x86_64 .
+          echo "Building with flags: $BUILD_FLAGS"
+          
+          # 创建输出目录
+          mkdir -p /build/compress
+          
+          # 查找主包
+          MAIN_PKG="."
+          if [ -d "./cmd" ]; then
+            # 查找cmd目录下的包
+            for cmd in ./cmd/*/; do
+              if [ -d "$cmd" ] && [ -f "${cmd}main.go" ]; then
+                MAIN_PKG="./${cmd%/}"
+                echo "Found main package: $MAIN_PKG"
+                break
+              fi
+            done
           fi
           
-          # 验证构建结果
-          if [ -f "/app/openlist-alpine-x86_64" ]; then
-            chmod +x /app/openlist-alpine-x86_64
-            echo "Build successful!"
-            file /app/openlist-alpine-x86_64
-            ls -lh /app/openlist-alpine-x86_64
-          else
-            echo "::error::Build failed - no executable created"
-            
-            # 尝试更详细的错误信息
-            echo "Trying to build with verbose output..."
-            CGO_ENABLED=1 GOOS=linux GOARCH=amd64 \
-            go build -v -x -o /app/test-build . 2>&1 | tail -50
-            
+          # 构建二进制
+          echo "Building from package: $MAIN_PKG"
+          CGO_ENABLED=1 GOOS=linux GOARCH=amd64 \
+          eval "go build $BUILD_FLAGS -o /build/openlist-alpine-$ARCH $MAIN_PKG"
+          
+          if [ $? -ne 0 ]; then
+            echo "::error::Build failed"
             exit 1
           fi
+          
+          chmod +x /build/openlist-alpine-$ARCH
+          
+          # 文件信息
+          echo "Build completed:"
+          file /build/openlist-alpine-$ARCH
+          ls -lh /build/openlist-alpine-$ARCH
 
-      - name: Debug Info
-        if: github.event_name == 'workflow_dispatch' && inputs.debug == true
+      - name: Compress Binary
         run: |
-          echo "=== DEBUG INFORMATION ==="
-          echo "Go version: $(go version)"
-          echo "Go env:"
-          go env
-          echo "Directory tree (Go files):"
-          find . -name "*.go" -type f | head -30
-          echo "go.mod dependencies:"
-          grep -E "^\t" go.mod || echo "No dependencies listed"
-          echo "Network check:"
-          curl -I https://proxy.golang.org --connect-timeout 5 || echo "Network test failed"
-
-      - name: Process Artifacts
-        run: |
-          if [ -f "/app/openlist-alpine-x86_64" ]; then
-            echo "Processing artifact..."
+          cd /build
+          ARCH="${{ steps.config.outputs.arch }}"
+          IS_LITE="${{ steps.config.outputs.is_lite }}"
+          
+          # 使用UPX压缩
+          if command -v upx &> /dev/null; then
+            echo "Compressing binary with UPX..."
+            upx --best --lzma -q /build/openlist-alpine-$ARCH -o /build/compress/openlist-alpine-$ARCH-upx
+            mv /build/compress/openlist-alpine-$ARCH-upx /build/compress/openlist-alpine-$ARCH
             
-            # Strip binary
-            strip /app/openlist-alpine-x86_64 2>/dev/null || true
-            
-            # Create distribution package
-            mkdir -p /dist
-            cp /app/openlist-alpine-x86_64 /dist/
-            
-            # Create info file
-            cat > /dist/build-info.txt << EOF
-            OpenList Alpine x86_64 Build
-            Build time: $(date)
-            Build environment: Alpine 3.23
-            Architecture: x86_64/amd64
-            File info: $(file /app/openlist-alpine-x86_64)
-            File size: $(stat -c%s /app/openlist-alpine-x86_64) bytes
-            EOF
-            
-            # Package
-            tar -zcvf /build/openlist-alpine-x86_64-$(date +%Y%m%d-%H%M%S).tar.gz -C /dist .
-            
-            echo "Artifact created:"
-            ls -lh /build/*.tar.gz
+            echo "Compression results:"
+            ORIGINAL_SIZE=$(stat -c%s "/build/openlist-alpine-$ARCH")
+            COMPRESSED_SIZE=$(stat -c%s "/build/compress/openlist-alpine-$ARCH")
+            echo "Original: $ORIGINAL_SIZE bytes"
+            echo "Compressed: $COMPRESSED_SIZE bytes"
+            echo "Reduction: $((100 - COMPRESSED_SIZE * 100 / ORIGINAL_SIZE))%"
           else
-            echo "::error::No artifact to process"
-            exit 1
+            echo "UPX not available, copying binary..."
+            cp /build/openlist-alpine-$ARCH /build/compress/
           fi
+          
+          # 创建tar.gz包
+          cd /build/compress
+          tar -czf openlist-alpine-$ARCH-${{ github.event.inputs.build_type || 'standard' }}.tar.gz openlist-alpine-$ARCH
+          
+          # 生成校验和
+          sha256sum openlist-alpine-$ARCH-${{ github.event.inputs.build_type || 'standard' }}.tar.gz > openlist-alpine-$ARCH-${{ github.event.inputs.build_type || 'standard' }}.tar.gz.sha256
+          
+          echo "Artifacts created:"
+          ls -lh /build/compress/
 
-      - name: Upload Artifact
+      - name: Upload Artifacts (Push/PR)
+        if: github.event_name != 'release'
         uses: actions/upload-artifact@v4
         with:
-          name: openlist-alpine-x86_64
-          path: /build/*.tar.gz
-          retention-days: 7
+          name: openlist-alpine-${{ steps.config.outputs.arch }}-${{ github.event.inputs.build_type || 'standard' }}
+          path: /build/compress/*
+          retention-days: 30
+
+      - name: Upload Release Assets
+        if: github.event_name == 'release'
+        uses: softprops/action-gh-release@v2
+        with:
+          files: /build/compress/*
+          tag_name: ${{ github.event.release.tag_name }}
+          draft: false
+          prerelease: false
+          generate_release_notes: false
+
+  # 多架构构建矩阵（可选）
+  alpine-matrix:
+    needs: alpine-build
+    if: github.event_name == 'release'
+    strategy:
+      matrix:
+        arch: [ x86_64, aarch64 ]
+        build-type: [ standard, lite ]
+    name: Alpine ${{ matrix.arch }} ${{ matrix.build-type }}
+    runs-on: ubuntu-latest
+    container:
+      image: alpine:3.23
+      options: --privileged
+    
+    steps:
+      - name: Setup QEMU for multi-arch
+        uses: docker/setup-qemu-action@v3
+    
+      - name: Setup Buildx
+        uses: docker/setup-buildx-action@v3
+    
+      - name: Build for different architectures
+        run: |
+          echo "Building for ${{ matrix.arch }} (${{ matrix.build-type }})"
+          # 这里可以根据需要添加多架构构建逻辑
