--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,30 +30,43 @@ jobs:
         with:
           go-version: '1.25.0'
 
-      - name: Install Alpine Build Tools
+      - name: Install musl交叉编译工具
         run: |
-          # 下载Alpine的静态编译工具链
-          wget http://dl-cdn.alpinelinux.org/alpine/v3.23/main/x86_64/apk-tools-static-2.14.0-r2.apk
-          tar -xzf apk-tools-static-2.14.0-r2.apk
+          sudo apt-get update
+          sudo apt-get install -y musl-tools
           
-          # 创建Alpine构建环境
-          mkdir -p alpine-build
-          cd alpine-build
+          # 验证安装
+          x86_64-linux-musl-gcc --version || echo "musl工具已安装"
 
-      - name: Cross-compile for Alpine (static musl)
+      - name: Configure Build Environment
         run: |
-          # 设置交叉编译环境
+          # 设置构建类型
+          if [ '${{ github.event.inputs.build_type }}' = 'lite' ]; then
+            export BUILD_TAGS="lite"
+            export BUILD_TYPE="lite"
+          else
+            export BUILD_TAGS=""
+            export BUILD_TYPE="standard"
+          fi
+          
+          echo "BUILD_TAGS=$BUILD_TAGS" >> $GITHUB_ENV
+          echo "BUILD_TYPE=$BUILD_TYPE" >> $GITHUB_ENV
+          
+          echo "Building $BUILD_TYPE version"
+          echo "Build tags: $BUILD_TAGS"
+
+      - name: Download Go Dependencies
+        run: |
+          go mod download
+          echo "Dependencies downloaded"
+
+      - name: Build for Alpine (static musl)
+        run: |
+          echo "开始静态编译Alpine版本..."
+          
+          # 设置musl编译器
           export CC=x86_64-linux-musl-gcc
           export CXX=x86_64-linux-musl-g++
-          
-          # 构建标志
-          if [ '${{ github.event.inputs.build_type }}' = 'lite' ]; then
-            BUILD_TAGS='-tags=lite'
-            BUILD_TYPE='lite'
-          else
-            BUILD_TAGS=''
-            BUILD_TYPE='standard'
-          fi
           
           # 静态编译
           CGO_ENABLED=1 \
@@ -61,39 +74,108 @@ jobs:
           GOARCH=amd64 \
           CC=x86_64-linux-musl-gcc \
           CXX=x86_64-linux-musl-g++ \
-          go build $BUILD_TAGS \
+          go build \
             -trimpath \
             -ldflags="-s -w -extldflags '-static'" \
             -buildvcs=false \
+            -tags="$BUILD_TAGS" \
             -o openlist-alpine .
           
-          chmod +x openlist-alpine
-          
-          # 验证
-          file openlist-alpine
-          ls -lh openlist-alpine
+          if [ $? -eq 0 ]; then
+            echo "编译成功!"
+            chmod +x openlist-alpine
+            
+            # 验证文件
+            echo "文件信息:"
+            file openlist-alpine
+            echo "文件大小:"
+            ls -lh openlist-alpine
+            
+            # 检查是否为静态链接
+            echo "链接检查:"
+            ldd openlist-alpine 2>&1 | grep -q "not a dynamic" && echo "✓ 静态链接" || echo "⚠ 可能是动态链接"
+          else
+            echo "::error::编译失败"
+            exit 1
+          fi
 
-      - name: Compress and Package
+      - name: Install UPX for compression
         run: |
-          cd alpine-build
-          BUILD_TYPE='${{ github.event.inputs.build_type || 'standard' }}'
-          
-          # 使用UPX压缩
-          if command -v upx &> /dev/null; then
+          sudo apt-get install -y upx
+          upx --version
+
+      - name: Compress Binary
+        run: |
+          if [ -f "openlist-alpine" ]; then
+            echo "使用UPX压缩二进制文件..."
+            
+            # 备份原始文件
+            cp openlist-alpine openlist-alpine-original
+            
+            # 压缩
             upx --best --lzma -q openlist-alpine -o openlist-alpine-compressed
             mv openlist-alpine-compressed openlist-alpine
+            
+            echo "压缩完成:"
+            ORIGINAL_SIZE=$(stat -c%s "openlist-alpine-original")
+            COMPRESSED_SIZE=$(stat -c%s "openlist-alpine")
+            echo "原始大小: $ORIGINAL_SIZE bytes"
+            echo "压缩后: $COMPRESSED_SIZE bytes"
+            echo "压缩率: $((100 - COMPRESSED_SIZE * 100 / ORIGINAL_SIZE))%"
+            
+            # 验证压缩后的文件
+            echo "压缩后文件信息:"
+            file openlist-alpine
+          else
+            echo "::error::未找到编译产物"
+            exit 1
           fi
+
+      - name: Create Distribution Package
+        run: |
+          echo "创建分发包..."
           
-          # 打包
-          tar -czf openlist-alpine-$BUILD_TYPE.tar.gz openlist-alpine
-          sha256sum openlist-alpine-$BUILD_TYPE.tar.gz > openlist-alpine-$BUILD_TYPE.tar.gz.sha256
+          # 创建目录结构
+          mkdir -p dist/alpine
           
-          echo "Artifacts created:"
-          ls -lh *.tar.gz *.sha256
+          # 复制二进制文件
+          cp openlist-alpine dist/alpine/
+          
+          # 创建README
+          cat > dist/alpine/README.md << 'EOF'
+          # OpenList Alpine Build
+          
+          ## 版本信息
+          - 构建类型: ${{ env.BUILD_TYPE }}
+          - 构建时间: $(date)
+          - 架构: x86_64 (amd64)
+          - 环境: Alpine Linux compatible (static musl)
+          
+          ## 使用说明
+          1. 直接运行: `chmod +x openlist-alpine && ./openlist-alpine`
+          2. 或复制到Alpine系统: `cp openlist-alpine /usr/local/bin/openlist`
+          
+          ## 注意事项
+          - 此版本为静态编译，不依赖系统库
+          - 可在Alpine Linux及其他使用musl libc的系统上运行
+          EOF
+          
+          # 创建tar.gz包
+          cd dist/alpine
+          tar -czf ../openlist-alpine-${{ env.BUILD_TYPE }}.tar.gz .
+          
+          # 生成SHA256校验和
+          cd ..
+          sha256sum openlist-alpine-${{ env.BUILD_TYPE }}.tar.gz > openlist-alpine-${{ env.BUILD_TYPE }}.tar.gz.sha256
+          
+          echo "包创建完成:"
+          ls -lh openlist-alpine-*.tar.gz*
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: openlist-alpine-${{ github.event.inputs.build_type || 'standard' }}
-          path: alpine-build/openlist-alpine-*.tar.gz*
+          name: openlist-alpine-${{ env.BUILD_TYPE }}
+          path: |
+            dist/openlist-alpine-*.tar.gz
+            dist/openlist-alpine-*.tar.gz.sha256
           retention-days: 30
